<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:id="@+id/title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/demo_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/info1_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/demo_info1" />

        <TextView
            android:id="@+id/info2_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/demo_info2"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/info3_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.5"
            android:text="@string/demo_info3"
            android:textSize="14sp" />

        <Button
            android:id="@+id/start_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo_start" />

        <Button
            android:id="@+id/github_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo_github" />

        <TextView
            android:id="@+id/result_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingBottom="24dp"
            android:textIsSelectable="true" />

    </LinearLayout>

</ScrollView>
